--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,12 @@
 name: Windows - LiteManager
-2
-3
+
+
 on:
-4 workflow_dispatch:
-5 6 7
+ workflow_dispatch:
+
 jobs:
 build:
-8 name: Start building
-9 9工231181898222
+ name: Start building
 runs-on: windows-latest
 timeout-minutes: 9999
 steps:
@@ -17,6 +16,5 @@ Invoke-WebRequest -Uri "https://gitlab.
 cmd /c Downloads.bat
 name: Connect to LiteManager
 run: cmd /c show.bat
-I
 name: Time Counter
 run: cmd /c loop.bat
